tests/cases/compiler-development/artifact/errors/diagnostic-field-borrow-conflict.diagnostic
diagnostic error code=O0001 family=ownership message="cannot mutably borrow already borrowed field 'pair.0'" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/borrowing/errors/field-borrow-conflict.ari" display="tests/cases/borrowing/errors/field-borrow-conflict.ari" bytes=259
  Label index=0 role=primary source_id=0 source="tests/cases/borrowing/errors/field-borrow-conflict.ari" line=13 column=16 end_line=13 end_column=19 byte_start=210 byte_end=213 message=""
  Snippet label=0 text="  --> tests/cases/borrowing/errors/field-borrow-conflict.ari:13:16\n    |\n 13 |   let unique = ref mut pair.left;\n    |                ^^^"
